# mvp-buildkit

./: .env.example  .gitignore  COMMAND_REFERENCE.md  COMMIT_MANIFEST.md  Makefile  README.md  context_state.md  docker-compose.yml  langgraph.json  proof_execution_loop.py  pyproject.toml  setup.py
.cursor/rules/: 00_global.md  10_invariants.md
council/packets/: plan_packet.md
docs/: ARTIFACT_REGISTRY.md  build_guide.md
invariants/: invariants.md
migrations/: 001_initial_schema.sql
phase_0/: context_pack_lite.md  spec_lite.yaml
phase_minus_1/: build_candidate.yaml  exception_packet.md  research_snapshot.yaml
prompts/: chair_synthesis_template.md  hotfix_sync.md  patch_template.md  review_template.md  step_template.md
schemas/: build_candidate.schema.json  research_snapshot.schema.json
scripts/: check_artifacts.py  generate_context_pack.py  run_phase2_pipeline.sh  toy_dogfood.sh
spec/: spec.yaml
src/agentic_mvp_factory/: __init__.py  artifact_deps.py  cli.py  config.py  constants.py  db.py  execution_graph.py  execution_loop.py  execution_state.py  graph.py  model_client.py  observe.py  repo.py  repo_writer.py  reranker.py  research_runner.py  review_flow.py  search_clients.py  step_extractor.py  step_runner.py  validator.py
src/agentic_mvp_factory/phase2/: __init__.py  cursor_rules_council.py  invariants_council.py  prompts_council.py  spec_council.py  tracker_council.py
tests/: test_artifact_deps.py  test_validator.py
tracker/: factory_tracker.yaml
versions/20251224_153558_50ef33d8-ced0-4f48-8338-d617831ec7b9/: manifest.json
(+19 files in other folders)
